@@ -11,6 +11,7 @@ CHANGE: UI    | The comment icon column now displays a blank icon if there is no
 CHANGE: Plug  | Essential plugins are now automatically re-enabled if previously disabled by user [amc1]
                  - the "Start / Stop Rules" plugin was disabled by users in the past, this was causing torrents to be stuck in "waiting" state
 CHANGE: Plug  | Client ID plugin is removed [amc1]
+CHANGE: Plug  | New command line option - "azureus.loadplugins", to skip plugins being loaded at startup [amc1]
 CHANGE: UIv3  | Faster UI Startup [TuxPaper]
 CHANGE: UIv3  | Reduced UI memory footprint [TuxPaper]
 
